compiler/testData/diagnostics/tests/subtyping/memberAnonymousObjects.kt
class Test {
    private var x = object {};
    init {
        x = <!TYPE_MISMATCH!>object<!> {}
    }
}